@@ -37,45 +37,66 @@ typedef struct _GAsyncQueue     GAsyncQueue;
  */
 
 /* Get a new GAsyncQueue with the ref_count 1 */
-GAsyncQueue*  g_async_queue_new                (void);
+GAsyncQueue*  g_async_queue_new               (void);
 
 /* Lock and unlock a GAsyncQueue. All functions lock the queue for
  * themselves, but in certain cirumstances you want to hold the lock longer,
  * thus you lock the queue, call the *_unlocked functions and unlock it again.
  */
-void          g_async_queue_lock               (GAsyncQueue *queue);
-void          g_async_queue_unlock             (GAsyncQueue *queue);
+void         g_async_queue_lock                 (GAsyncQueue      *queue);
+void         g_async_queue_unlock               (GAsyncQueue      *queue);
+
+
 
 /* Ref and unref the GAsyncQueue. */
-GAsyncQueue*  g_async_queue_ref                (GAsyncQueue *queue);
-void          g_async_queue_unref              (GAsyncQueue *queue);
+GAsyncQueue* g_async_queue_ref                  (GAsyncQueue      *queue);
+void         g_async_queue_unref                (GAsyncQueue      *queue);
+
+
 #ifndef G_DISABLE_DEPRECATED
 /* You don't have to hold the lock for calling *_ref and *_unref anymore. */
-void          g_async_queue_ref_unlocked       (GAsyncQueue *queue);
-void          g_async_queue_unref_and_unlock   (GAsyncQueue *queue);
+void         g_async_queue_ref_unlocked         (GAsyncQueue      *queue);
+void         g_async_queue_unref_and_unlock     (GAsyncQueue      *queue);
+
+
 #endif /* !G_DISABLE_DEPRECATED */
 
 /* Push data into the async queue. Must not be NULL. */
-void          g_async_queue_push               (GAsyncQueue *queue,
-                                                gpointer     data);
-void          g_async_queue_push_unlocked      (GAsyncQueue *queue,
-                                                gpointer     data);
+void         g_async_queue_push                 (GAsyncQueue      *queue,
+						 gpointer          data);
+void         g_async_queue_push_unlocked        (GAsyncQueue      *queue,
+						 gpointer          data);
+
+void         g_async_queue_push_sorted          (GAsyncQueue      *queue,
+						 gpointer          data,
+						 GCompareDataFunc  func,
+						 gpointer          user_data);
+void         g_async_queue_push_sorted_unlocked (GAsyncQueue      *queue,
+						 gpointer          data,
+						 GCompareDataFunc  func,
+						 gpointer          user_data);
 
 /* Pop data from the async queue. When no data is there, the thread is blocked
  * until data arrives. */
-gpointer      g_async_queue_pop                (GAsyncQueue *queue);
-gpointer      g_async_queue_pop_unlocked       (GAsyncQueue *queue);
+gpointer     g_async_queue_pop                  (GAsyncQueue      *queue);
+gpointer     g_async_queue_pop_unlocked         (GAsyncQueue      *queue);
+
+
 
 /* Try to pop data. NULL is returned in case of empty queue. */
-gpointer      g_async_queue_try_pop            (GAsyncQueue *queue);
-gpointer      g_async_queue_try_pop_unlocked   (GAsyncQueue *queue);
+gpointer     g_async_queue_try_pop              (GAsyncQueue      *queue);
+gpointer     g_async_queue_try_pop_unlocked     (GAsyncQueue      *queue);
+
+
 
 /* Wait for data until at maximum until end_time is reached. NULL is returned
  * in case of empty queue. */
-gpointer      g_async_queue_timed_pop          (GAsyncQueue *queue,
-                                                GTimeVal    *end_time);
-gpointer      g_async_queue_timed_pop_unlocked (GAsyncQueue *queue,
-                                                GTimeVal    *end_time);
+gpointer     g_async_queue_timed_pop            (GAsyncQueue      *queue,
+						 GTimeVal         *end_time);
+gpointer     g_async_queue_timed_pop_unlocked   (GAsyncQueue      *queue,
+						 GTimeVal         *end_time);
+
+
 
 /* Return the length of the queue. Negative values mean that threads
  * are waiting, positve values mean that there are entries in the
@@ -83,8 +104,15 @@ gpointer      g_async_queue_timed_pop_unlocked (GAsyncQueue *queue,
  * the number of waiting threads, g_async_queue_length == 0 could also
  * mean 'n' entries in the queue and 'n' thread waiting. Such can
  * happen due to locking of the queue or due to scheduling. */
-gint          g_async_queue_length             (GAsyncQueue *queue);
-gint          g_async_queue_length_unlocked    (GAsyncQueue *queue);
+gint         g_async_queue_length               (GAsyncQueue      *queue);
+gint         g_async_queue_length_unlocked      (GAsyncQueue      *queue);
+void         g_async_queue_sort                 (GAsyncQueue      *queue,
+						 GCompareDataFunc  func,
+						 gpointer          user_data);
+void         g_async_queue_sort_unlocked        (GAsyncQueue      *queue,
+						 GCompareDataFunc  func,
+						 gpointer          user_data);
+
 
 G_END_DECLS
 
